# archiveparse

./: .gitmodules  CMakeLists.txt  README.md
archiveparse/: CMakeLists.txt
archiveparse-test/: CMakeLists.txt  main.cpp
archiveparse/archiveparse/: BSACompressedFile.cpp  BSAFile.cpp  BSAFilesystemLayer.cpp  BSAHash.cpp  BSATypes.cpp  EncodingUtilities.cpp  File.cpp  Filesystem.cpp  FilesystemLayer.cpp  FilesystemLayerFactory.cpp  LooseFile.cpp  LooseFilesFilesystemLayer.cpp  WindowsError.cpp  WindowsHandle.cpp
archiveparse/include/archiveparse/: BSACompressedFile.h  BSAFile.h  BSAFilesystemLayer.h  BSAHash.h  BSATypes.h  EncodingUtilities.h  File.h  Filesystem.h  FilesystemLayer.h  FilesystemLayerFactory.h  LooseFile.h  LooseFilesFilesystemLayer.h  WindowsError.h  WindowsHandle.h
lz4/: CMakeLists.txt
zlib/: CMakeLists.txt
zlib/include/: zconf.h
